@@ -32,6 +32,7 @@
 #include "gamemap.h"
 #include "game.h"
 #include "effects.h"
+#include "combat.h"
 
 using std::rand;
 
@@ -458,7 +459,7 @@ void Monster_actor::die
 					// Party defeated an evil monster?
 	if (attacker && attacker->is_in_party() &&
 	    get_alignment() != neutral && get_alignment() != friendly)
-		Audio::get_ptr()->start_music_combat ( CSVictory, 0);
+		Combat_schedule::monster_died();
 					// Got to delete this somewhere, but
 					//   doing it here crashes.
 	}
